--- a/02Javascript/htmlTask/5. table.html
+++ b/02Javascript/htmlTask/5. table.html
@@ -1,34 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <dir>
-        <tr>
-            <td>
-                
-            </td>
-        </tr>
-    </dir>
-</body>
-</html>
 
-Programming Language
-JavaScript
-Angular
-React
-Vue.js
-Python
-Django Framework
-Flask Framework
-Java
-Spring
-Maven
-Hibernate
-Database
-MySQL
-MongoDB
-Cansandra
+<body>
+    <table border="1" cellspacing="0">
+        <thead>
+            <tr>
+                <th rowspan="2">State of Health</th>
+                <th colspan="2">Fasting Value</th>
+                <th>After Remaining</th>
+            </tr>
+            <tr>
+                <th>Minimum</th>
+                <th>Normal</th>
+                <th>2hours of Eating</th>
+            </tr>
+        </thead>
+        <body>
+            <tr>
+                <td>Health</td>
+                <td>70</td>
+                <td>100</td>
+                <td>Less then 140</td>
+            </tr>
+            <tr>
+                <td>Pre-Diabetes</td>
+                <td>101</td>
+                <td>126</td>
+                <td>140 to 200</td>
+            </tr>
+            <tr>
+                <td>Diabetes</td>
+                <td>more then 126</td>
+                <td>Not Applicable</td>
+                <td>More then 200</td>
+            </tr>
+        </body>
+    </table>
+</body>
+
+</html>
